--- a/rustris-core/Cargo.toml
+++ b/rustris-core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "tetris-srs"
+name = "rustris-core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tetris-core = { path="../tetris-core" }
+rand = "0.6.0"
+ndarray = "0.15.6"
